Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29306

MinGW: Qt 5.0.1 problem with _vsnprintf_s on Win XP

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.2
    • 5.0.1
    • Network
    • None
    • Win XP Home Premium 32bit + SP3

      I've tested :qt-windows-opensource-5.0.1-mingw47_32-x86-offline-2013-01-24-418.exe. It works fine with standard widgets. After adding webkitwidgets, Program.exe don't want start because of error in module Qt5V8.dll. This library call msvcrt.dll - entry point for "_vsnprintf_s" non present procedure. My version of msvcrt.dll is 7.0.2600.5512 (xpsp.080413-2111). It is possible recompling QtV8.dll for using with Win XP?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            zibicoder Zibi Coder
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes