Get rid of webkitwidgets due to WinXP bug in minGW.

This requires removal of the update check feature (commented out for now,
cos we want to keep it).

https://bugreports.qt-project.org/browse/QTBUG-29306